kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: meeting
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: meeting
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meeting
    version: d0716d9
  name: meeting-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meeting
  template:
    metadata:
      labels:
        app: meeting
        version: d0716d9
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: meeting-configmap-8gh874f8b2
        image: eu.gcr.io/vote-of-confidence-233210/meeting@d0716d9
        name: meeting
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 50m
        volumeMounts:
        - mountPath: /etc/deployment/application.yaml
          name: config-volume
          readOnly: true
          subPath: application.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: application.yaml
            path: application.yaml
          name: meeting-configmap-8gh874f8b2
        name: config-volume
