service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meeting
spec:
  ports:
    - name: http-meeting
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: meeting
  type: NodePort
