virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: meeting-vs
spec:
  hosts:
    - "xn--b1aaffpuncuol5m.xn--p1ai"
  gateways:
    - "voc-gateway.default.svc.cluster.local"
  http:
    - match:
        - uri: {}
      route:
        - destination:
            host: "meeting.default.svc.cluster.local"
            port:
              number: 8080
